--- a/charts/fleet-telemetry/Chart.yaml
+++ b/charts/fleet-telemetry/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: fleet-telemetry
-description: An Open Source Helm chart for fleet-telemetry
+description: An Open Source Helm chart for fleet-telemetry 2
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
